# asdf-pydantic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  file_needing_precommit_fixes.py  pyproject.toml
.github/workflows/: badges.yml  hatch-matrix.json  pr.yml  release.yml  test.v2.yaml  test.yml
asdf_pydantic/: __init__.py  converter.py  model.py  schema.py
asdf_pydantic/examples/: extensions.py  shapes.py  tree.py  with_units.py
docs/: conf.py  model.md  requirements.txt
docs/_static/: custom.css
docs/concepts/: fields.md  index.md  models.md  versioning.md
docs/tutorials/: index.md  writing-asdf-pydantic-models.md
scripts/: generate-hatch-matrix.sh
tests/: convert_to_asdf_test.py  convert_to_asdf_yaml_tree_test.py  converter_test.py  entry_point_test.py  model_test.py  sanity_test.py  schema_validation_test.py  test_converter.py  test_model.py
tests/asdf-pydantic-example/: README.md  pyproject.toml  test.py
tests/asdf-pydantic-example/asdf_pydantic_example/: __init__.py  circle.py  integration.py
tests/converter/: creater_converter_test.py
tests/examples/: shapes.py  test_astropy_tables.py  test_nested.py  test_node.py  test_rectangle.py
tests/patterns/: astropy_quantity_test.py  astropy_types_test.py  migrating_existing_types_test.py  ndarray_type_test.py  nested_type_test.py  numpy_type_test.py  tree_node_test.py  union_type_test.py
