[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asdf-pydantic"
description = 'Create ASDF tags with pydantic models'
readme = "README.md"
requires-python = ">=3.9"
license-files = {paths = ["LICENSE"]}
keywords = []
authors = [
  { name = "Keto D. Zhang", email = "keto.zhang@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "asdf>=2",
  "pydantic>=1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://asdf-pydantic.readthedocs.io"
Issues = "https://github.com/ketozhang/asdf-pydantic/issues"
Source = "https://github.com/ketozhang/asdf-pydantic"

[project.entry-points]
'asdf.extensions' = { asdf_pydantic_extension = 'asdf_pydantic.examples.extensions:get_extensions' }

[tool.hatch.version]
path = "asdf_pydantic/__version__.py"

# Default Environment
[tool.hatch.envs.default]
dependencies = [
  "ipython",
  "pytest",
  "pytest-cov",
  "ipython",
  "astropy",
  "asdf-astropy"
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov = "test --cov-report=term-missing --cov-config=pyproject.toml --cov=asdf_pydantic --cov=tests {args}"

# Tool configs
[tool.coverage.run]
branch = true
parallel = true
omit = [
  "asdf_pydantic/__version__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.pydocstyle]
convention = "google"
