[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "asdf-pydantic"
description = 'Create ASDF tags with pydantic models'
readme = "README.md"
requires-python = ">=3.10"
license-files = {paths = ["LICENSE"]}
keywords = []
authors = [
  { name = "Keto D. Zhang", email = "keto.zhang@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "asdf>=3",
  "pydantic>=2",
  "numpy>=1.25",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://asdf-pydantic.readthedocs.io"
Issues = "https://github.com/ketozhang/asdf-pydantic/issues"
Source = "https://github.com/ketozhang/asdf-pydantic"

[project.entry-points]
'asdf.extensions' = { asdf_pydantic_extension = 'asdf_pydantic.examples.extensions:get_extensions' }

[tool.hatch.version]
source = "vcs"

# Default Environment
[tool.hatch.envs.default]
installer = "uv"
dependencies = [
  "ipython",
  "pytest",
  "pytest-cov",
  "ipython",
  "astropy",
  "asdf-astropy"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "test --cov-report=term-missing --cov-config=pyproject.toml --cov=asdf_pydantic --cov=tests {args}"

[tool.hatch.envs.test]
template = "default"
matrix-name-format = "{variable}={value}"

[tool.hatch.envs.test.scripts]
test = "pytest {args}"

[[tool.hatch.envs.test.matrix]]
# Only test with numpy v1 on Python 3.9
python = ["3.9"]
numpy-version = ["1"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]
numpy-version = ["1", "2"]


[tool.hatch.envs.test.overrides]
matrix.numpy-version.dependencies = [
  { value = "numpy>=1,<2", if = ["1"] },
  { value = "numpy>=2,<3", if = ["2"] },
  { value = "astropy>=6.1", if = ["2"] },
]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "sphinx-autoapi",
  "sphinx-book-theme",
  "myst-parser"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html {args}"

# Tool configs
[tool.coverage.run]
branch = true
parallel = true
omit = [
  "asdf_pydantic/__version__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.pydocstyle]
convention = "google"
